# itemize

./: .gitignore  Cargo.toml  README.md  bits.rs  build.rs
.github/workflows/: check.yml  ci.yml  publish.yml
itemize/: .gitignore  Cargo.toml  build.rs
itemize/examples/: derive.rs  minimal.rs  parsing.rs
itemize/src/: either.rs  lib.rs
itemize/src/into_rows/: mod.rs
itemize/src/into_rows/variadic/: mod.rs
itemize/tests/: derive.rs  temp.rs
itemize_2/: Cargo.toml
itemize_2/src/: lib.rs
itemize_derive/: Cargo.toml
itemize_derive/src/: lib.rs
itemize_derive/src/into_items/: collections.rs  context.rs  from_collections.rs  from_tuples.rs  from_types.rs  mod.rs  tuples.rs  types.rs
itemize_derive/src/into_rows/: collections.rs  context.rs  mod.rs  tuples.rs
itemize_derive/src/items/: mod.rs  tuples.rs
itemize_derive/tests/: test_improved_macros.rs
itemize_derive_impl/: Cargo.toml
itemize_derive_impl/src/: codegen.rs  context.rs  generate.rs  lib.rs  trait_config.rs  util.rs
itemize_derive_impl/src/generate/: into_items.rs  into_rows.rs  try_into_items.rs
itemize_derive_impl/src/into_items/: collections.rs  mod.rs  tuples.rs  types.rs
itemize_derive_impl/src/into_rows/: collections.rs  mod.rs  tuples.rs
itemize_derive_impl/src/traits/: into_items.rs  into_rows.rs  mod.rs  try_into_items.rs  try_into_rows.rs
itemize_derive_impl/src/unified/: collections.rs  mod.rs  tuples.rs  types.rs
itemize_testing/: Cargo.toml  expand
itemize_testing/src/: expand.rs  generics.rs  lib.rs  minimal_try.rs  simple.rs  try_demo.rs  try_variants.rs
src/: iter.rs  lib.rs
src/into_items/: mod.rs
src/into_rows/: mod.rs
src/into_rows/variadic/: either.rs  mod.rs
