[package]
name = "itemize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Flexible input handling for APIs accepting single values, tuples, or collections"
keywords = ["iterator", "collections", "api", "derive"]
categories = ["rust-patterns"]
readme = "../README.md"

[dependencies]
itemize_derive = { version = "0.1", path = "../itemize_derive", optional = true }

[features]
default = ["derive"]
derive = ["itemize_derive"]
